--- a/assets/styles/sass/components/_dishes.sass
+++ b/assets/styles/sass/components/_dishes.sass
@@ -6,15 +6,15 @@
 
     &__title
         @extend %title-1
-
+        margin-bottom: 5vw
 
     &__description
         @extend %paragraphe-l
-        margin-top: 5vw
 
-.starter-dishes
+.starters-dishes
     text-align: center
-    margin-top: 10vw
+    margin-top: 25vw
+    padding-right: 5vw
 
     &__title
         @extend %title-2
@@ -25,7 +25,7 @@
         margin-top: 5vw
 
 .bruschetta
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -37,6 +37,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -47,11 +48,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .lettuce
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -61,9 +60,9 @@
     &__image
         width: 30vw
 
-
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -74,11 +73,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .quinoa
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -90,6 +87,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -100,11 +98,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .goat-cheese-salad
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -116,6 +112,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -126,11 +123,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .pasta-salad
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -142,6 +137,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -152,12 +148,11 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .main-courses-dishes
     text-align: center
-    margin-top: 10vw
+    margin-top: 25vw
+    padding-right: 5vw
 
     &__title
         @extend %title-2
@@ -167,7 +162,7 @@
 
 
 .berthoud
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -179,6 +174,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -189,11 +185,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .camembert
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -205,6 +199,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -215,11 +210,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .croziflette
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -231,6 +224,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -241,11 +235,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .reblochon-cheese-fondue
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -257,6 +249,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -267,11 +260,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .three-cheese-fondue
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -283,6 +274,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -293,11 +285,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .meat-fondue
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -309,6 +299,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -319,11 +310,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .charcuterie-platter
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -335,6 +324,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -345,11 +335,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .raclette-for-two
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -361,6 +349,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -371,11 +360,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .raclette-for-many
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -387,6 +374,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -397,11 +385,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .reblochon-tart
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -413,6 +399,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -423,11 +410,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .tartiflette
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -439,6 +424,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -449,12 +435,11 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .burgers-dishes
     text-align: center
-    margin-top: 10vw
+    margin-top: 25vw
+    padding-right: 5vw
 
     &__title
         @extend %title-2
@@ -465,7 +450,7 @@
         margin-top: 5vw
 
 .double-cheddar-burger
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -477,6 +462,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -487,11 +473,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .double-cheese-burger
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -503,6 +487,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -513,11 +498,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .meat-burger
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -529,6 +512,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -539,11 +523,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .black-bread-burger
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -555,6 +537,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -565,11 +548,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .reblochon-burger
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -581,6 +562,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -591,12 +573,11 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .vegetarians-dishes
     text-align: center
-    margin-top: 10vw
+    margin-top: 20vw
+    padding-right: 5vw
 
     &__title
         @extend %title-2
@@ -607,7 +588,7 @@
         margin-top: 5vw
 
 .rice-vegetables
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -619,6 +600,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -629,11 +611,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .vegetables-soups
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -645,6 +625,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -655,11 +636,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .vegetables-tower
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -671,6 +650,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -681,11 +661,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .potatoes-garlic-soups
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -697,6 +675,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -707,12 +686,11 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .desserts-dishes
     text-align: center
-    margin-top: 10vw
+    margin-top: 25vw
+    padding-right: 5vw
 
     &__title
         @extend %title-2
@@ -723,7 +701,7 @@
         margin-top: 10vw
 
 .gourmet-coffee
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -735,6 +713,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -745,11 +724,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .cheesecake
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -761,6 +738,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -771,11 +749,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .chocolate-ice-cream
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -787,6 +763,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -797,11 +774,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .chocolate-caramel-cake
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -813,6 +788,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -823,11 +799,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .chocolate-marshmallows-cake
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -839,6 +813,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -849,11 +824,9 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
 
 .cream-cake
-    margin-top: 5vw
+    margin-top: 17vw
     +utils.responsive(tablet)
         display: flex
         flex-direction: row
@@ -865,6 +838,7 @@
 
     &__description
         margin-top: 5vw
+        padding: 5vw
 
         &--title
             @extend %title-3
@@ -875,5 +849,3 @@
     &__price
         @extend %paragraphe-s
         color: utils.$brown
-        +utils.responsive(tablet)
-            width: 10vw
