--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,7 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"/>
 		<link rel="icon" href="{{asset('build/images/logo.png')}}">
 		<meta viewport="width=device-width, initial-scale=1.0">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta description="Venez au Quai Antique vivre une expérience gastronomique sans artifices. Vous y trouverez des plats confectionnés avec des produits locaux et avec passion !">
 
 		{% block stylesheets %}
