--- a/templates/pages/dishes.html.twig
+++ b/templates/pages/dishes.html.twig
@@ -15,7 +15,7 @@
         <li class="bruschetta">
             <img class="bruschetta__image" src="{{asset('build/images/starters/bruschetta_tomatoes.jpg')}}" alt="Bruschetta de tomates avec dés de fromages.">
             <div class="bruschetta__description">
-                <p class="bruschetta__decription--title">Bruschetta de tomates et ses dés de fromage.</p>
+                <p class="bruschetta__description--title">Bruschetta de tomates et ses dés de fromage.</p>
                 <p class="bruschetta__description--details">(Pain complet maison, tomates, fromage, huile d'olive.)</p>
             </div>
             <p class="bruschetta__price">10€</p>
@@ -46,9 +46,9 @@
         </li>
         <li class="pasta-salad">
             <img class="pasta-salad__image" src="{{asset('build/images/starters/pasta_salad.jpg')}}" alt="Salade de pâtes.">
-            <div>
-                <p class="pasta-salad__title">Salade de pâtes.</p>
-                <p class="pasta-salad__details">(Salade, pâtes, olives, chèvre, huile d'olive.)</p>
+            <div class="description">
+                <p class="pasta-salad__description--title">Salade de pâtes.</p>
+                <p class="pasta-salad__description--details">(Salade, pâtes, olives, chèvre, huile d'olive.)</p>
             </div>
             <p class="pasta-salad__price">14€</p>
         </li>
@@ -67,7 +67,7 @@
             <p class="berthoud__price">22€</p>
         </li>
         <li class="camembert">
-            <img classe="camembert__image" src="{{asset('build/images/main_courses/camembert.jpeg')}}" alt="Cammenbert rôti dans sa croûte de pain.">
+            <img class="camembert__image" src="{{asset('build/images/main_courses/camembert.jpeg')}}" alt="Cammenbert rôti dans sa croûte de pain.">
             <div class="camembert__description">
                 <p class="camembert__description--title">Cammenbert rôti dans sa croûte de pain.</p>
                 <p class="camembert__description--details">(Cammenbert, pain, huile d'olive.)</p>
@@ -131,7 +131,7 @@
             <p class="raclette-for-many__price">35€</p>
         </li>
         <li class="reblochon-tart">
-            <img class=="reblochon-tart__image" src="{{asset('build/images/main_courses/reblochon_tart.jpeg')}}" alt="Tarte au reblochon.">
+            <img class="reblochon-tart__image" src="{{asset('build/images/main_courses/reblochon_tart.jpeg')}}" alt="Tarte au reblochon.">
             <div class="reblochon-tart__description">
                 <p class="reblochon-tart__description--title">Tarte au reblochon.</p>
                 <p class="reblochon-tart__description--details">(Reblochon, oignons, pommes de terres, lardons, crème.)</p>
@@ -140,9 +140,9 @@
         </li>
         <li class="tartiflette">
             <img class="tartiflette__image" src="{{asset('build/images/main_courses/tartiflette.jpeg')}}" alt="Tartiflette.">
-            <div>
-                <p class="tartiflette__title">Tartiflette.</p>
-                <p class="tartiflette__details">(Reblochon, pommes de terres, lardons, vin blanc, crème, oignons.)</p>
+            <div class="tartiflette__description">
+                <p class="tartiflette__description--title">Tartiflette.</p>
+                <p class="tartiflette__description--details">(Reblochon, pommes de terres, lardons, vin blanc, crème, oignons.)</p>
             </div>
             <p class="tartiflette__price">25€</p>
         </li>
@@ -154,9 +154,9 @@
     <ul class="burgers-dishes__list">
         <li class="double-cheddar-burger">
             <img class="double-cheddar-burger__image" src="{{asset('build/images/burgers/double_cheddar_burger.jpg')}}" alt="Burger avec double tranches de cheddar.">
-            <div>
-                <p class="double-cheddar-burger__title">Burger double cheddar.</p>
-                <p class="double-cheddar-burger__details">(Pain, cheddar, boeuf, salade, tomates, oignons, ail, moutarde.)</p>
+            <div class="double-cheddar-burger__description">
+                <p class="double-cheddar-burger__description--title">Burger double cheddar.</p>
+                <p class="double-cheddar-burger__description--details">(Pain, cheddar, boeuf, salade, tomates, oignons, ail, moutarde.)</p>
             </div>
             <p class="double-cheddar-burger__price">21€</p>
         </li>
