Path to home, dishes, menus pages added.

--- a/templates/_partials/_header.html.twig
+++ b/templates/_partials/_header.html.twig
@@ -8,9 +8,9 @@
 		</div>
 		<div>
 			<nav class="header__container--nav">
-				<a href="#" class="btn btn__primary header__link">Accueil</a>
-				<a href="#" class="btn btn__primary header__link">La carte</a>
-				<a href="#" class="btn btn__primary header__link">Nos menus</a>
+				<a href="{{path('app_home')}}" class="btn btn__primary header__link">Accueil</a>
+				<a href="{{path('app_dishes')}}" class="btn btn__primary header__link">La carte</a>
+				<a href="{{path('app_menus')}}" class="btn btn__primary header__link">Nos menus</a>
 				<a href="#" class="btn btn__primary header__link">Réserver</a>
 				<a href="#" class="btn btn__primary header__link">S'inscire</a>
 				<a href="#" class="btn btn__primary header__link">Se connecter</a>
