Registration form created.

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,7 +6,7 @@
 
 <section class="main flux">
     <h1 class="main__title">Bienvenue au Quai Antique !</h1>
-    <p class="main__text-presentation">Venez savourez des plats sans artifices, créés à partir de produits locaux !</p>
+    <p class="main__text-presentation">Venez savourer des plats sans artifices, créés à partir de produits locaux !</p>
 </section>
 
 <section class="description flux">
